--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,17 @@
           </dependency>
         </dependencies>
       </plugin>
+      
+      <!-- https://stackoverflow.com/questions/55381133/an-error-has-occured-in-jacoco-report-generation -->
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.2</version>
+          <configuration>
+              <forkedProcessExitTimeoutInSeconds>60</forkedProcessExitTimeoutInSeconds>
+              <forkCount>1</forkCount>
+          </configuration>
+      </plugin>
     </plugins>
   </build>
 
